--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "chameleon2die4/sage9-components",
+    "license": "MIT",
     "authors": [
         {
             "name": "Chameleon2die4",
